2005-07-18  Geoffrey Garen  <ggaren@apple.com>

        -fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=4008
        Error objects report incorrect length
        
        Reviewed by darin.

        * kjs/error_object.cpp: Error objects now include a length property
        (ErrorObjectImp::ErrorObjectImp):

        * tests/mozilla/expected.html: updated expected results to reflect fix
        * tests/mozilla/js1_5/Exceptions/regress-123002.js: test now expects 
        ecma compliant results

2005-07-15  Geoffrey Garen  <ggaren@apple.com>

        -rolled in KDE fixes for http://bugzilla.opendarwin.org/show_bug.cgi?id=3601
        Error instance type info
        
        Reviewed by mjs.

        * kjs/error_object.cpp:
        - Created ErrorInstanceImp class for Error() objects. 
        - Changed parent object for Native Errors to "Function" (matches
        ECMA spec).
        (ErrorInstanceImp::ErrorInstanceImp):
        (ErrorProtoFuncImp::call):
        (ErrorObjectImp::construct):
        (NativeErrorImp::construct):

        * kjs/error_object.h:
        (KJS::ErrorInstanceImp::classInfo):
        * kjs/object.h: made comment more informative about ClassInfo

        * tests/mozilla/expected.html:

2005-07-14  Geoffrey Garen  <ggaren@apple.com>

        - fixed: JS test suite expects an out of memory error
        that our memory efficiency avoids
        
        Reviewed by mjs.

        * tests/mozilla/js1_5/Array/regress-157652.js:
        test now expects normal execution
        
        * tests/mozilla/expected.html:

2005-07-14  Geoffrey Garen  <ggaren@apple.com>
        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=4006
        testkjs doesn't implement gc()
        
        - test failure:
        ecma_3/Function/regress-104584.js
        
        Reviewed by mjs.

        * kjs/interpreter.cpp:
        (Interpreter::finalCheck): removed misleading while && comment

        * kjs/testkjs.cpp: added "gc" function to global object